--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   app:
     build:
       context: .
-    ports:
-    - "888:5000"
+#    ports:
+#    - "888:5000"
     volumes:
     - ./backend:/app
     - ./app/node_modules
@@ -22,3 +22,11 @@ services:
     volumes:
     - ./mongo-db:/data/db
     - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+  web:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    restart: on-failure
+    volumes:
+      - ./client:/usr/share/nginx/html
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
